# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.402 2005/11/29 19:59:27 wolf31o2 Exp $

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/stage4/stage4-chroot.sh:
  Fixed USE invocations in stage4 target.

  29 Nov 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage1_target.py:
  Force use=livecd for livecd-stage1

  29 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is version 2.0_pre20051129.

  28 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage1_template.spec, examples/stage4_template.spec:
  Removed kudzu-knoppix from example spec files.

  22 Nov 2005; Eric Edgar <rocket@gentoo.org>
  +livecd/cdtar/ppc-yaboot-cdtar.tar.bz2:
  Added ppc-yaboot-cdtar.tar.bz2 to have an Apple/IBM bootable cdrom

  22 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/grp_template.spec, examples/livecd-stage1_template.spec,
  examples/stage4_template.spec, +examples/tinderbox_template.spec:
  Added tinderbox_template.spec to examples and cleaned up pkgcache_path
  definitions in the examples to fit in 80 columns.

  22 Nov 2005; Eric Edgar <rocket@gentoo.org> examples/grp_template.spec,
  examples/livecd-stage1_template.spec, examples/stage4_template.spec,
  modules/grp_target.py, modules/tinderbox_target.py,
  targets/tinderbox/tinderbox-chroot.sh:
  Tinderbox script: added newuse, tinderbox and grp targets added support for
  overriding the pkgcache location via pkgcache_path - pkgcache_path:
  /path/to/cache in the spec file, updated example specs to note pkgcache_path

  22 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> files/catalyst.conf:
  Added portdir example to catalyst.conf for bug #113272.

  22 Nov 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/create-iso.sh:
  Fixed a few lines which were causing the isolinux directory to be removed