@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-chroot.sh,v 1.18 2005/07/05 21:53:41 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/livecd-stage1/Attic/livecd-stage1-chroot.sh,v 1.19 2005/11/29 20:15:48 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -21,6 +21,6 @@ setup_portage
 
 #turn off auto-use:
 export USE_ORDER="env:pkg:conf:defaults"	
-export USE="${clst_livecd_use}"
+export USE="${clst_use}"
 
 run_emerge "${clst_packages}"
